clean up api contract
