# cryptotracker.webapi/Controllers/MeasuringController.cs
@@ -3,7 +3,6 @@ using cryptotracker.webapi.Dtos;
 using cryptotracker.webapi.Services;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
-using static cryptotracker.webapi.Services.MeasuringService;
 
 namespace cryptotracker.webapi.Controllers
 {
@@ -17,19 +16,6 @@ namespace cryptotracker.webapi.Controllers
         public MeasuringController(MeasuringService measuringService)
         {
             _measuringService = measuringService;
-        }
-
-        [HttpGet("{id}", Name = "GetMeasuringsByIntegration")]
-        public async Task<List<AssetMeasuringDto>> GetMeasuringsByIntegration([Required] Guid id)
-        {
-            return await _measuringService.GetMeasuringsByIntegrationAsync(id);
-        }
-
-        [HttpPost(Name = "AddIntegrationMeasuring")]
-        public async Task<bool> AddIntegrationMeasuring([Required] Guid id, [FromBody] AddMeasuringDto dto)
-        {
-            await _measuringService.AddIntegrationMeasuringAsync(id, dto);
-            return true;
         }
 
         [HttpDelete("{id}", Name = "DeleteMeasuringById")]
